--- a/box-model.html
+++ b/box-model.html
@@ -184,7 +184,7 @@
         <h3>Elementos o cajas de línea:</h3>
         <ul>
             <li>Ocupan el espacio necesario para mostrar su contenido.</li>
-            <li>No tienen dimensiones modificables (alto, ancho).</li>
+            <li>No tienen dimensiones modificables ancho y alto (width, height).</li>
             <li>Al ocupar solamente el espacio requerido van a permitir otros elementos a su
                 lado.
             </li>
