--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
                 <li><a href="units.html#rems ">Unidades REMs (Root em)</a></li>
                 <li><a href="units.html#exs">Unidades EXs</a></li>
                 <li><a href="units.html#chs">Unidades CHs</a></li>
+                <li><a href="units.html#porcentajes">Porcentajes (%)</a></li>
+                <li><a href="units.html#unidades-viewport">Unidades del Viewport</a></li>
 
             </ol>
 
