--- a/index.html
+++ b/index.html
@@ -177,6 +177,20 @@
                 <li><a href="units.html#chs">Unidades CHs</a></li>
                 <li><a href="units.html#porcentajes">Porcentajes (%)</a></li>
                 <li><a href="units.html#unidades-viewport">Unidades del Viewport</a></li>
+                <li>
+                    <a href="units.html#usos-unidades-medida">¿Cuándo usar cada unidad de medida?</a>
+                </li>
+            </ol>
+
+            <li>
+                <a href="variables-functions.html#inicio-variables-functions">Variables y funciones en CSS</a>
+            </li>
+            <ol type="a">
+                <li>
+                    <a href="variables-functions.html#custom-properties">Custom Properties (Variables
+                        CSS)</a>
+                </li>
+                <li><a href="variables-functions.html#function-url">Función url()</a></li>
 
             </ol>
 
