--- a/variables-functions.html
+++ b/variables-functions.html
@@ -36,7 +36,7 @@
     <article id="custom-properties">
         <h2>Custom Properties (Variables CSS)</h2>
         <p>
-            Una Custom properties (o Propiedade configurable) es una variable, es decir un
+            Una Custom properties (o Propiedad configurable) es una variable, es decir un
             espacio reservado de memoria en la computadora que va a almacenar el valor de un
             dato.
         </p>
