--- a/index.html
+++ b/index.html
@@ -191,7 +191,20 @@
                         CSS)</a>
                 </li>
                 <li><a href="variables-functions.html#function-url">Función url()</a></li>
+                <li><a href="variables-functions.html#function-calc">Función calc()</a></li>
+                <li>
+                    <a href="variables-functions.html#functions-min-max">Funciones min() & max()</a>
+                </li>
+                <li>
+                    <a href="variables-functions.html#function-clamp">Función clamp()</a>
+                </li>
+            </ol>
 
+            <li>
+                <a href="fonts-texts.html#inicio-fuentes-textos">Estilos de fuentes y textos</a>
+            </li>
+            <ol type="a">
+                <li><a href="fonts-texts.html#estilos-fuentes">Estilos de Fuentes</a></li>
             </ol>
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
