--- a/variables-functions.html
+++ b/variables-functions.html
@@ -27,6 +27,13 @@
                 <a href="variables-functions.html#custom-properties">Custom Properties (Variables CSS)</a>
             </li>
             <li><a href="variables-functions.html#function-url">Función url()</a></li>
+            <li><a href="variables-functions.html#function-calc">Función calc()</a></li>
+            <li>
+                <a href="variables-functions.html#functions-min-max">Funciones min() & max()</a>
+            </li>
+            <li>
+                <a href="variables-functions.html#function-clamp">Función clamp()</a>
+            </li>
         </ol>
 
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
@@ -103,10 +110,82 @@
 
     <article id="function-url">
         <h2>Función url()</h2>
+        <p>
+            La funcion url() se usa para especificar la ruta donde se encuentra el origen de
+            algun recurso que querramos cargar, es decir que nos permite invocar contenido
+            externo a la hoja de estilos como rutas de imagenes, hojas css, tipografias, etc.
+        </p>
 
+        <br>
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="variables-functions.html#inicio-variables-functions" class="volver-inicio">🔼 Ir a inicio variables y
+            funciones</a>
+        <hr>
+    </article>
+
+    <article id="function-calc">
+        <h2>Función calc()</h2>
+        <p>
+            La funcion calc() nos sirve para hacer calculos aritmeticos.
+        </p>
 
         <h3>Ejemplos:</h3>
+        <div class="ch-10">
+            1234567890
+        </div>
 
+        <br>
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="variables-functions.html#inicio-variables-functions" class="volver-inicio">🔼 Ir a inicio variables y
+            funciones</a>
+        <hr>
+    </article>
+
+    <article id="functions-min-max">
+        <h2>Funciones min() & max()</h2>
+        <p>
+            Estas son funciones a las cuales les podemos dar diferentes valores esparados
+            por comas y siempre va a tomar el valo que sea minimo o maximo dependiendo de la
+            funcion que estemos utilizando.
+        </p>
+        <p>
+            <b>min()</b>: Va a tomar el menor valor entre los valores que le hayamos asignado.
+        </p>
+        <p>
+            <b>max()</b>: Va a tomar el mayor valor entre los valores que le hayamos
+            asignado.
+        </p>
+
+        <h3>Ejemplos:</h3>
+        <div class="min-max">
+            Funciones min() & max()
+        </div>
+
+        <br>
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="variables-functions.html#inicio-variables-functions" class="volver-inicio">🔼 Ir a inicio variables y
+            funciones</a>
+        <hr>
+    </article>
+
+    <article id="function-clamp">
+        <h2>Función clamp()</h2>
+        <p>
+            Esta es una funcion que va a recibir 3 valores.
+        <ol>
+            <li>
+                <b>Tamaño minimo</b>:
+            </li>
+            <li>
+                <b>Tamaño ideal</b>:
+            </li>
+            <li>
+                <b>tamaño maximo</b>:
+            </li>
+        </ol>
+        </p>
+
+        <h3>Ejemplos:</h3>
 
         <br>
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
