--- a/index.html
+++ b/index.html
@@ -205,6 +205,13 @@
             </li>
             <ol type="a">
                 <li><a href="fonts-texts.html#estilos-fuentes">Estilos de Fuentes</a></li>
+                <li>
+                    <a href="fonts-texts.html#fuentes-externas">Como cargar fuentes (o tipografias) externas (@font-face
+                        & font-display)</a>
+                </li>
+                <li><a href="fonts-texts.html#google-fonts ">Google Fonts</a></li>
+
+
             </ol>
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
