--- a/index.html
+++ b/index.html
@@ -210,7 +210,10 @@
                         & font-display)</a>
                 </li>
                 <li><a href="fonts-texts.html#google-fonts ">Google Fonts</a></li>
-
+                <li><a href="fonts-texts.html#estilos-texto">Estilos de Texto</a></li>
+                <li>
+                    <a href="fonts-texts.html#iconos-tipograficos ">Iconos Tipográficos</a>
+                </li>
 
             </ol>
 
