--- a/fonts-texts.html
+++ b/fonts-texts.html
@@ -12,6 +12,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
+    <!-- material Icons de Google -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- CDN Bootstrap para iconos -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
+    <!-- Iconos Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- <link rel="stylesheet" href="css/normalize.css"> -->
 
     <!-- Archivo de estilos -->
@@ -39,7 +50,7 @@
             <li><a href="fonts-texts.html#google-fonts ">Google Fonts</a></li>
             <li><a href="fonts-texts.html#estilos-texto">Estilos de Texto</a></li>
             <li>
-                <a href="fonts-texts.html#iconos-tipograficos ">Iconos Tipográficos</a>
+                <a href="fonts-texts.html#iconos-tipograficos ">Iconos tipográficos vectoriales</a>
             </li>
         </ol>
 
@@ -358,8 +369,74 @@
     </article>
 
     <article id="iconos-tipograficos">
-        <h2>Iconos Tipográficos</h2>
+        <h2>Iconos tipográficos vectoriales</h2>
+        <p>Para trabajar con Iconos tipograficos primero mandamos a llamar en nuestro
+            docuemto HTML la hoja de estilos que carga la tipografia de iconos, luego vamos
+            y selleccionamos los iconos de nuestra preferencia, obtenemos su codigo HTML y
+            lo pegamos en nuestro documento.
+            Entre las mas populares tipografias de iconos vectoriales encontramos tres:</p>
+        <ol>
+            <li>
+                <h3>Material Icons o Iconos de Google</h3>
+                Enlace a <a href="https://fonts.google.com/icons" target="_blank"><b>Material
+                        Icons</b></a> de Google.
+                <p>
+                <h4>Ejemplos material Icons Google:</h4>
+                <span class="material-icons">
+                    info
+                </span>
+                <span class="material-icons">
+                    face
+                </span>
+                <span class="material-icons">
+                    pets
+                </span>
+                <span class="material-icons">
+                    public
+                </span>
+                </p>
 
+            </li>
+            <li>
+                <h3>Bootstrap Icons</h3>
+                Enlace a <a href="https://icons.getbootstrap.com/" target="_blank"><b>Iconos
+                        de Bootstrap</b></a>.
+
+                <p>
+                <h4>Ejemplos Bootstrap Icons</h4>
+                <i class="bi bi-youtube"></i>
+                <i class="bi bi-linkedin"></i>
+                <a href="https://www.apple.com/co/" target="_blank"><i class="bi bi-apple"></i></a>
+                <i class="bi bi-share-fill"></i>
+                </p>
+
+            </li>
+            <li>
+                <h3>Font awesome</h3>
+                <p>
+                    Font aweson tiene una parte de sus iconos gratuitos y otra parte de pago,
+                    pero hay que registrarse para poder descarlos, para evitar eso
+                    utilizamos el <a href="https://cdnjs.com/libraries/font-awesome" target="_blank"><b>CDN</b> </a> de
+                    Font Awesome que nos evitara el
+                    tener que registrarnos (copiamos y pegamos el primer enlace que aparece
+                    en la lista).
+                </p>
+                <p>
+                    Enlace a <a href="https://fontawesome.com/search?m=free" target="_blank"><b>Font awesome</b></a>,
+                    iconos gratis.
+                </p>
+
+                <p>
+                <h4>Ejemplos Font Awesome</h4>
+                <i class="fa-brands fa-amazon"></i>
+                <i class="fa-brands fa-angellist"></i>
+                <i class="fa-brands fa-chromecast"></i>
+                <i class="fa-regular fa-face-angry"></i>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-google"></i>
+                </p>
+            </li>
+        </ol>
 
         <br>
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
