--- a/index.html
+++ b/index.html
@@ -212,10 +212,16 @@
                 <li><a href="fonts-texts.html#google-fonts ">Google Fonts</a></li>
                 <li><a href="fonts-texts.html#estilos-texto">Estilos de Texto</a></li>
                 <li>
-                    <a href="fonts-texts.html#iconos-tipograficos ">Iconos Tipográficos</a>
+                    <a href="fonts-texts.html#iconos-tipograficos ">Iconos tipográficos vectoriales</a>
                 </li>
 
             </ol>
+
+            <li><a href="border-outline.html#inicio-bordes-outlines">Bordes y outlines</a></li>
+            <ol type="a">
+                <li><a href=""></a></li>
+            </ol>
+
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
         </ol>
