--- a/border-outline.html
+++ b/border-outline.html
@@ -24,22 +24,59 @@
     <article id="temario-bordes-outlines">
         <h2>Temario Bordes y outlines</h2>
         <ol type="a">
-            <li><a href=""></a></li>
+            <li>
+                <a href="border-outline.html#border-radius">Propiedad border-radius</a>
+            </li>
+            <li><a href="border-outline.html#outline">Propiedad outline</a></li>
+
         </ol>
 
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
         <hr>
     </article>
 
-    <article>
-        <h2></h2>
+    <article id="border-radius">
+        <h2>Propiedad border-radius</h2>
+        <p><code>Border-Radius</code> es una propiedad para redondear los bordes</p>
+        <p>
+            <code>Border-Radius</code> es un shorthand para:
+        <ul>
+            <li><code>border-top-left-radius</code></li>
+            <li><code>border-top-right-radius</code></li>
+            <li><code>border-bottom-right-radius</code></li>
+            <li><code>border-bottom-left-radius</code></li>
+        </ul>
+        </p>
+        <p>
+            Enlace a documentacion de la propiedad <code>border-radius</code> en <a
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/border-radius" target="_blank"><b>MDN</b></a>.
+        </p>
 
+        <h3>Ejemplos:</h3>
+        <div class="box border-radius"></div>
+        <div class="box border-radius-2"></div>
+        <div class="box border-radius-3"></div>
+        <div class="box border-radius-4"></div>
 
         <br>
         <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
         <a href="border-outline.html#inicio-bordes-outlines" class="volver-inicio">🔼 Ir a Bordes y outlines</a>
         <hr>
     </article>
+
+    <article id="outline">
+        <h2>Propiedad outline</h2>
+
+
+
+        <h3>Ejemplos:</h3>
+
+        <br>
+        <a href="index.html#inicio" class="volver-inicio">◀️ Volver a pagina principal</a>
+        <a href="border-outline.html#inicio-bordes-outlines" class="volver-inicio">🔼 Ir a Bordes y outlines</a>
+        <hr>
+    </article>
+
 </body>
 
 </html>
