--- a/index.html
+++ b/index.html
@@ -219,9 +219,13 @@
 
             <li><a href="border-outline.html#inicio-bordes-outlines">Bordes y outlines</a></li>
             <ol type="a">
-                <li><a href=""></a></li>
-            </ol>
+                <li>
+                    <a href="border-outline.html#border-radius">Propiedad border-radius</a>
+                </li>
+                <li><a href="border-outline.html#outline">Propiedad outline</a></li>
 
+
+            </ol>
 
             <li><a href="index.html#enlaces">Enlaces y links de referencia y documentacion de css</a></li>
         </ol>
